--- a/styles/globals.css
+++ b/styles/globals.css
@@ -72,7 +72,7 @@
 }
 
 html {
-  font-family: "Montserrat", sans-serif;
+  /* font-family: "Montserrat", sans-serif; */
   font-size: var(--fs-base); /* base font-size (1rem = 16px) */
   line-height: 1.6;
 }
